2015-07-19  Jaroslav Fojtik  <JaFojtik@seznam.cz>

	* dcraw/dcraw.c: Fixed bad define WIN32.

2015-07-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt, www/Hg.rst, www/index.rst: Applied English bugs patch
	by Amadu Jalloh.

	* dcraw/dcraw.c: Add a port replacement for strnlen().

2015-07-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.h: The declaration for MagickGetImageGravity()
	was missing.  Resolves SourceForge bug #308 magick_wand.h misses
	declaration of MagickGetImageGravity.

2015-07-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* dcraw: Update bundled dcraw to release 9.26.0.

	* png: Updated bundled libpng to release 1.6.17.

	* lcms: Update bundled lcms2 to release 2.7.

2015-07-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Brought up to date with changes thus far since last
	release.

	* magick/version.h.in (MagickCopyright): Update most recent
	copyright year.

	* magick/render.c (DrawAffineImage): Fix problem with negative x
	offset.  Resolves SourceForge issue #306 "gm fails to convert svg
	to jpeg if svg has images with negative coordinates".

	* magick/pixel_cache.c (ReadCachePixels): Add checks for integer
	overflows.

2015-07-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/module.c (ModuleAliases): Add a module alias for GRAYA.

2015-07-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/montage.c (MontageImages): Fix Coverity 101317 "Resource
	leak".

	* magick/blob.c: Limit the data size passed to the read/write
	calls to the filesystem blocksize and make multiple calls if
	required.

	* magick/pixel_cache.c: Limit the data size passed to the
	read/write, pread/prwite calls and make multiple calls if
	required.

2015-07-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (WriteBlobFile): Properly handle short read. Read
	data in units of filesystem block size.
	(BlobToFile): Write data in units of filesystem block size.
