@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020150719"
-#define public MagickPackageReleaseDate "snapshot-20150719"
+#define public MagickPackageVersionAddendum ".020150726"
+#define public MagickPackageReleaseDate "snapshot-20150726"
