@@ -35,6 +35,16 @@
 <div class="document">
 
 
+<p>2015-07-26  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/tiff.c (WritePTIFImage): Fix SourceForge issue #269
+&quot;Convert creates SubfileType 0x2 instead of 0x1&quot;.  From looking at
+the code, this is a regression since the time support for the page
+subfile type was added (probably via changeset 11831
+(037eef0f67f2) on 2007-08-17).</li>
+</ul>
+</blockquote>
 <p>2015-07-19  Jaroslav Fojtik  &lt;<a class="reference external" href="mailto:JaFojtik&#37;&#52;&#48;seznam&#46;cz">JaFojtik<span>&#64;</span>seznam<span>&#46;</span>cz</a>&gt;</p>
 <blockquote>
 <ul class="simple">
